3.0.2:
  Allow per service endpoint definition
  If bank failed, try anyway
3.0.1:
  Start internal web server even if consul is not declared
3.0.0:
  Micro service to watch remote bank releases